commit 110 (student chatbot)

--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html>
+<html >
 <head>
     <meta charset="utf-8">
     <title>STRACK – Student Dashboard</title>
@@ -266,7 +266,7 @@
             </li>
 
             <li>
-                <a style="font-size:18px;"><i class="fa-solid fa-comments" style="margin-right:5px;"></i> Messenger</a>
+                <a style="font-size:18px;" href="{% url 'StudentChatPage' %}"><i class="fa-solid fa-comments" style="margin-right:5px;"></i> Messenger</a>
             </li>
 
             <li>
