--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -401,7 +401,7 @@
                     </div>
 
                     <div class="col-xl-4 mb-30">
-                        <a href="{% url 'StudentAttendanceDisplayPage' %}">
+                        <a href="{% url 'StudentChatPage' %}">
                         <div class="quick-card"
                              style="background:linear-gradient(135deg,#42a5f5,#1e88e5); width:350px; height:150px; text-align:center; padding:30px 20px; border-radius:40px;">
                             <i class="fa-solid fa-comments" style="font-size:55px;"></i>
