commit 116 (chatbot time fixed in setting timezone to asia/kolkata and views time=localtime(m.message) )

--- a/StudentApp/templates/student_chat.html
+++ b/StudentApp/templates/student_chat.html
@@ -17,7 +17,8 @@
 <div class="messenger-wrapper">
     <div class="chat-window" style="width:100%;">
         <div class="chat-header">
-            <h4>Chat with Teacher</h4>
+            <img src="{% static 'teacheradmin/assets/images/teacher.jpg'%}" class="rounded-circle" height="100px" width="100px">
+            <h4 style="margin-left:1px;">Tutor</h4>
             <button id="clearChatBtn" onclick="return confirm('Are you sure ?')">Clear Chat</button>
         </div>
 
